--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cmdk": "^0.2.0",
     "convex": "^1.7.1",
     "emoji-picker-react": "^4.6.5",
+    "framer-motion": "^11.0.5",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -34,7 +35,7 @@
     "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
