--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/clerk-react": "^4.30.2",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,14 +26,18 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "convex": "^1.7.1",
+    "date-fns": "^3.4.0",
     "emoji-picker-react": "^4.6.5",
     "framer-motion": "^11.0.5",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.0",
+    "react-loader-spinner": "^6.1.6",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
