--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/openai": "^0.0.19",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -29,6 +30,7 @@
     "date-fns": "^3.4.0",
     "emoji-picker-react": "^4.6.5",
     "framer-motion": "^11.0.5",
+    "langchain": "^0.1.27",
     "lucide-react": "^0.306.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
